Editor Stuff! Main Menu Bar and some extra learning.

--- a/DeferredGraphics/imgui.ini
+++ b/DeferredGraphics/imgui.ini
@@ -4,7 +4,77 @@ Size=400,400
 Collapsed=0
 
 [Window][Amir Azmi]
-Pos=29,76
-Size=415,268
+Pos=104,48
+Size=257,650
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=451,37
+Size=577,848
 Collapsed=1
+
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Window][Example: Constrained Resize]
+Pos=60,60
+Size=688,347
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=100,100
+Size=450,61
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=100,200
+Size=450,61
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=100,300
+Size=247,48
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=170,102
+Size=1266,325
+Collapsed=0
+
+[Window][Example: Console]
+Pos=61,58
+Size=520,600
+Collapsed=0
+
+[Window][Style Editor]
+Pos=1302,34
+Size=339,856
+Collapsed=0
+
+[Window][Dear ImGui Metrics]
+Pos=60,60
+Size=338,222
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=60,54
+Size=607,921
+Collapsed=0
+
+[Window][Inspector]
+Pos=-4,356
+Size=231,413
+Collapsed=0
+
+[Window][Entity List]
+Pos=-3,18
+Size=229,338
+Collapsed=0
 
