--- a/DeferredGraphics/imgui.ini
+++ b/DeferredGraphics/imgui.ini
@@ -69,12 +69,17 @@ Size=607,921
 Collapsed=0
 
 [Window][Inspector]
-Pos=964,97
-Size=394,781
+Pos=-2,17
+Size=205,327
 Collapsed=0
 
 [Window][Entity List]
 Pos=883,38
 Size=144,202
 Collapsed=1
+
+[Window][Settings]
+Pos=-1,342
+Size=204,248
+Collapsed=0
 
