--- a/DeferredGraphics/DeferredGraphics.vcxproj
+++ b/DeferredGraphics/DeferredGraphics.vcxproj
@@ -77,6 +77,14 @@
     <IncludePath>$(SolutionDir)DeferredGraphics\includes;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)DeferredGraphics\libs\glew_lib\Release\x64;$(SolutionDir)DeferredGraphics\libs\lib-vc2019;C:\Users\amira\Desktop\OpenGl\libs\glew_lib\Release\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <IncludePath>$(SolutionDir)DeferredGraphics\includes;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)DeferredGraphics\libs\lib-vc2019;$(SolutionDir)DeferredGraphics\libs\glew_lib\Release\x64;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>$(SolutionDir)DeferredGraphics\includes;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)DeferredGraphics\libs\lib-vc2019;$(SolutionDir)DeferredGraphics\libs\glew_lib\Release\x64;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -114,6 +122,7 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -129,9 +138,11 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AABB.cpp" />
     <ClCompile Include="Behavior.cpp" />
     <ClCompile Include="DebugRenderingSystem.cpp" />
     <ClCompile Include="Editor.cpp" />
@@ -151,6 +162,7 @@
     <ClCompile Include="SystemManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AABB.h" />
     <ClInclude Include="Behavior.h" />
     <ClInclude Include="DebugRenderingSystem.h" />
     <ClInclude Include="Editor.h" />
