--- a/DeferredGraphics/imgui.ini
+++ b/DeferredGraphics/imgui.ini
@@ -69,8 +69,8 @@ Size=607,921
 Collapsed=0
 
 [Window][Inspector]
-Pos=6,9
-Size=254,374
+Pos=22,13
+Size=185,305
 Collapsed=0
 
 [Window][Entity List]
@@ -79,7 +79,12 @@ Size=144,202
 Collapsed=1
 
 [Window][Settings]
-Pos=36,372
+Pos=8,310
 Size=221,422
+Collapsed=0
+
+[Window][Debug Settings]
+Pos=784,39
+Size=236,213
 Collapsed=0
 
