--- a/DeferredGraphics/DeferredGraphics.vcxproj.filters
+++ b/DeferredGraphics/DeferredGraphics.vcxproj.filters
@@ -181,5 +181,11 @@
     <None Include="forwardLightingPass.vert">
       <Filter>Source Files\Shaders</Filter>
     </None>
+    <None Include="debugDraw.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="debugDraw.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
