--- a/DeferredGraphics/imgui.ini
+++ b/DeferredGraphics/imgui.ini
@@ -9,9 +9,9 @@ Size=257,650
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=448,18
+Pos=457,-5
 Size=577,848
-Collapsed=1
+Collapsed=0
 
 [Window][Example: Simple layout]
 Pos=60,60
@@ -79,7 +79,7 @@ Size=144,202
 Collapsed=1
 
 [Window][Settings]
-Pos=4,334
+Pos=4,335
 Size=221,422
 Collapsed=0
 
