--- a/DeferredGraphics/imgui.ini
+++ b/DeferredGraphics/imgui.ini
@@ -9,9 +9,9 @@ Size=257,650
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=457,-5
+Pos=479,24
 Size=577,848
-Collapsed=0
+Collapsed=1
 
 [Window][Example: Simple layout]
 Pos=60,60
@@ -69,8 +69,8 @@ Size=607,921
 Collapsed=0
 
 [Window][Inspector]
-Pos=7,7
-Size=362,326
+Pos=1,15
+Size=213,308
 Collapsed=0
 
 [Window][Entity List]
@@ -79,12 +79,17 @@ Size=144,202
 Collapsed=1
 
 [Window][Settings]
-Pos=4,335
-Size=221,422
+Pos=4,328
+Size=196,435
 Collapsed=0
 
 [Window][Debug Settings]
 Pos=784,39
 Size=236,213
+Collapsed=0
+
+[Window][Profiler]
+Pos=213,22
+Size=338,52
 Collapsed=0
 
