Learning Framebuffers better, adding more comments in te rendering section, adding shader for bloom

--- a/DeferredGraphics/DeferredGraphics.vcxproj
+++ b/DeferredGraphics/DeferredGraphics.vcxproj
@@ -197,6 +197,8 @@
     <ClInclude Include="TemplateUtils.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Shaders\ColorAndBright.frag" />
+    <None Include="Shaders\ColorAndBright.vert" />
     <None Include="Shaders\debugDraw.frag" />
     <None Include="Shaders\debugDraw.vert" />
     <None Include="Shaders\defferedLightingPass.frag" />
