--- a/DeferredGraphics/imgui.ini
+++ b/DeferredGraphics/imgui.ini
@@ -9,9 +9,10 @@ Size=257,650
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=284,749
-Size=466,844
-Collapsed=1
+Pos=0,582
+Size=358,419
+Collapsed=0
+DockId=0x00000008,0
 
 [Window][Example: Simple layout]
 Pos=60,60
@@ -59,9 +60,9 @@ Size=358,804
 Collapsed=1
 
 [Window][Dear ImGui Metrics]
-Pos=60,60
-Size=338,222
-Collapsed=0
+Pos=106,94
+Size=497,492
+Collapsed=1
 
 [Window][Example: Documents]
 Pos=60,54
@@ -69,9 +70,10 @@ Size=607,921
 Collapsed=0
 
 [Window][Inspector]
-Pos=697,19
-Size=327,359
+Pos=1574,19
+Size=346,982
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Entity List]
 Pos=883,38
@@ -79,9 +81,10 @@ Size=144,202
 Collapsed=1
 
 [Window][Settings]
-Pos=-1,17
-Size=280,532
+Pos=0,19
+Size=358,484
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Debug Settings]
 Pos=784,39
@@ -89,7 +92,30 @@ Size=236,213
 Collapsed=0
 
 [Window][Profiler]
-Pos=335,18
-Size=346,58
+Pos=0,505
+Size=358,75
 Collapsed=0
+DockId=0x00000007,0
+
+[Window][Scene]
+Pos=360,19
+Size=1212,982
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][DockSpace Demo]
+Pos=0,19
+Size=1920,982
+Collapsed=0
+
+[Docking][Data]
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1920,982 Split=X
+  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=1572,963 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=358,730 Split=Y Selected=0x1C33C293
+      DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=275,475 Selected=0x1C33C293
+      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=275,486 Split=Y Selected=0x0541D7F0
+        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=358,75 Selected=0x0541D7F0
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=358,419 Selected=0xE927CF2F
+    DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=1212,730 CentralNode=1 Selected=0x18B8C0DE
+  DockNode        ID=0x00000005 Parent=0x3BC79352 SizeRef=346,963 Selected=0xF02CD328
 
