Fixed textures for splitscreen to show up
make sure all textures alpha channel are set to 1.0f

--- a/DeferredGraphics/imgui.ini
+++ b/DeferredGraphics/imgui.ini
@@ -9,10 +9,10 @@ Size=257,650
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,582
-Size=358,419
+Pos=0,578
+Size=292,423
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000009,0
 
 [Window][Example: Simple layout]
 Pos=60,60
@@ -55,9 +55,9 @@ Size=520,600
 Collapsed=0
 
 [Window][Style Editor]
-Pos=627,79
+Pos=591,114
 Size=358,804
-Collapsed=1
+Collapsed=0
 
 [Window][Dear ImGui Metrics]
 Pos=106,94
@@ -70,8 +70,8 @@ Size=607,921
 Collapsed=0
 
 [Window][Inspector]
-Pos=1574,19
-Size=346,982
+Pos=1526,19
+Size=394,982
 Collapsed=0
 DockId=0x00000005,0
 
@@ -82,9 +82,9 @@ Collapsed=1
 
 [Window][Settings]
 Pos=0,19
-Size=358,484
+Size=292,483
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000006,0
 
 [Window][Debug Settings]
 Pos=784,39
@@ -92,14 +92,14 @@ Size=236,213
 Collapsed=0
 
 [Window][Profiler]
-Pos=0,505
-Size=358,75
+Pos=0,504
+Size=292,72
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000003,0
 
 [Window][Scene]
-Pos=360,19
-Size=1212,982
+Pos=294,19
+Size=1230,982
 Collapsed=0
 DockId=0x00000002,0
 
@@ -110,12 +110,12 @@ Collapsed=0
 
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1920,982 Split=X
-  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=1572,963 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=358,730 Split=Y Selected=0x1C33C293
-      DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=275,475 Selected=0x1C33C293
-      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=275,486 Split=Y Selected=0x0541D7F0
-        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=358,75 Selected=0x0541D7F0
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=358,419 Selected=0xE927CF2F
-    DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=1212,730 CentralNode=1 Selected=0x18B8C0DE
-  DockNode        ID=0x00000005 Parent=0x3BC79352 SizeRef=346,963 Selected=0xF02CD328
+  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=1524,963 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=292,730 Split=Y Selected=0x0541D7F0
+      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=350,483 Selected=0x1C33C293
+      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=350,497 Split=Y Selected=0xE927CF2F
+        DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=350,72 Selected=0x0541D7F0
+        DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=350,423 Selected=0xE927CF2F
+    DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=1230,730 CentralNode=1 Selected=0x18B8C0DE
+  DockNode        ID=0x00000005 Parent=0x3BC79352 SizeRef=394,963 Selected=0xF02CD328
 
