--- a/DeferredGraphics/imgui.ini
+++ b/DeferredGraphics/imgui.ini
@@ -10,9 +10,9 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,578
-Size=292,423
+Size=351,423
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000008,0
 
 [Window][Example: Simple layout]
 Pos=60,60
@@ -20,8 +20,8 @@ Size=500,440
 Collapsed=0
 
 [Window][Example: Constrained Resize]
-Pos=60,60
-Size=688,347
+Pos=68,65
+Size=688,327
 Collapsed=0
 
 [Window][Example: Property editor]
@@ -30,28 +30,28 @@ Size=430,450
 Collapsed=0
 
 [Window][Same title as another window##1]
-Pos=100,100
+Pos=700,128
 Size=450,61
 Collapsed=0
 
 [Window][Same title as another window##2]
-Pos=100,200
-Size=450,61
+Pos=596,206
+Size=449,84
 Collapsed=0
 
 [Window][###AnimatedTitle]
-Pos=100,300
-Size=247,48
+Pos=678,332
+Size=252,78
 Collapsed=0
 
 [Window][Example: Custom rendering]
-Pos=170,102
-Size=1266,325
+Pos=339,264
+Size=1188,672
 Collapsed=0
 
 [Window][Example: Console]
-Pos=61,58
-Size=520,600
+Pos=756,150
+Size=520,598
 Collapsed=0
 
 [Window][Style Editor]
@@ -60,12 +60,12 @@ Size=358,804
 Collapsed=0
 
 [Window][Dear ImGui Metrics]
-Pos=106,94
+Pos=783,69
 Size=497,492
-Collapsed=1
+Collapsed=0
 
 [Window][Example: Documents]
-Pos=60,54
+Pos=415,113
 Size=607,921
 Collapsed=0
 
@@ -82,9 +82,9 @@ Collapsed=1
 
 [Window][Settings]
 Pos=0,19
-Size=292,483
+Size=351,484
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000003,0
 
 [Window][Debug Settings]
 Pos=784,39
@@ -92,30 +92,35 @@ Size=236,213
 Collapsed=0
 
 [Window][Profiler]
-Pos=0,504
-Size=292,72
+Pos=0,505
+Size=351,71
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000007,0
 
 [Window][Scene]
-Pos=294,19
-Size=1230,982
+Pos=353,19
+Size=1171,982
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Window][DockSpace Demo]
 Pos=0,19
 Size=1920,982
 Collapsed=0
 
+[Window][About Dear ImGui]
+Pos=659,104
+Size=569,442
+Collapsed=0
+
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1920,982 Split=X
-  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=1524,963 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=292,730 Split=Y Selected=0x0541D7F0
-      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=350,483 Selected=0x1C33C293
-      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=350,497 Split=Y Selected=0xE927CF2F
-        DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=350,72 Selected=0x0541D7F0
-        DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=350,423 Selected=0xE927CF2F
-    DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=1230,730 CentralNode=1 Selected=0x18B8C0DE
-  DockNode        ID=0x00000005 Parent=0x3BC79352 SizeRef=394,963 Selected=0xF02CD328
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1920,982 Split=X
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=351,982 Split=Y Selected=0x1C33C293
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=291,484 Selected=0x1C33C293
+    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=291,496 Split=Y Selected=0x0541D7F0
+      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=291,71 Selected=0x0541D7F0
+      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=291,423 Selected=0xE927CF2F
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=1567,982 Split=X
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=1171,963 CentralNode=1 Selected=0x18B8C0DE
+    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=394,963 Selected=0xF02CD328
 
